# polynomial-generator

./: .gitignore  R1CS_TO_SPARTAN_GUIDE.md  README.md  pyproject.toml
examples/: usage_example.py
src/polynomial_generator/: __init__.py  chooser.py  cli.py  instance_generator.py
tests/: test_chooser.py  test_cli.py  test_instance_generator.py
