[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "polynomial-generator"
version = "0.1.0"
description = "Random polynomial function generator for R1CS circuit optimization"
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "polynomial_generator", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.24.0"
sympy = "^1.12"
click = "^8.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
isort = "^5.12.0"

[tool.poetry.scripts]
polynomial-generator = "polynomial_generator.cli:main"